Update ModLoader
- ModLoader's methods are static, no instances
- Mods can be added during runtime